# StackTrace

./: .gitattributes  .gitignore  README.md
macOS-terminal-dashboard/: ghostty_dash.sh
macOS-terminal-dashboard/configs/: newsboat_urls  ticker.yaml  zshrc.snippet
os-monitor/: CMakeLists.txt  README.md  config.example.json
os-monitor/src/: main.cpp
os-monitor/src/calendar/: ICalParser.cpp  ICalParser.hpp
os-monitor/src/config/: Config.cpp  Config.hpp
os-monitor/src/net/: HttpClient.cpp  HttpClient.hpp  RssParser.cpp  RssParser.hpp
os-monitor/src/panels/: Calendar.cpp  Calendar.hpp  Clock.cpp  Clock.hpp  FileManager.cpp  FileManager.hpp  NewsReader.cpp  NewsReader.hpp  Notes.cpp  Notes.hpp  Panel.hpp  StockTicker.cpp  StockTicker.hpp  SystemMetrics.cpp  SystemMetrics.hpp
os-monitor/src/platform/: Metrics.hpp  ProcLinux.hpp  linux.cpp  macos.cpp  raspberrypi.cpp
